# enigma-3d

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  app_state.json  build.rs
.cargo/: config.toml
.github/workflows/: rust.yml
docs/superpowers/plans/: 2026-04-27-shadows.md  2026-04-29-pawn-rush.md  2026-04-30-terrain.md
docs/superpowers/specs/: 2026-04-27-shadows-design.md  2026-04-29-pawn-rush-game-design.md  2026-04-30-terrain-design.md
examples/: chessboard.rs  engine.rs  pawn-rush.rs  skinned-mesh.rs  terrain.rs
python/: gpt-knowledge.txt  image-preprocessing.py  prepare_gpt_knowledge.py
res/models/: cube.gltf  cube.mtl  sphere.gltf  sphere.mtl  suzanne.fbx  suzanne.gltf  viking_room.gltf  viking_room.mtl
res/shader/: enigma_fragment_shader.glsl  enigma_fragment_unlit.glsl  enigma_vertex_shader.glsl
res/shader/post_processing/: post_processing_vert.glsl
res/shader/post_processing/bloom/: enigma_bloom_blur.glsl  enigma_bloom_extract.glsl
res/shader/post_processing/edge/: enigma_edge_detection.glsl
res/shader/post_processing/grayscale/: enigma_grayscale.glsl
src/: animation.rs  audio.rs  camera.rs  collision_world.rs  data.rs  debug_geo.rs  default_events.rs  event.rs  example_resources.rs  geometry.rs  gizmo.rs  lib.rs  light.rs  main.rs  material.rs  obj_loader.rs  object.rs  resources.rs  shader.rs  shadow.rs  terrain.rs  texture.rs  ui.rs
src/logging/: format.rs  mod.rs
src/postprocessing/: bloom.rs  depth_fog.rs  edge.rs  grayscale.rs  lens_dirt.rs  mod.rs  vignette.rs
src/res/models/: board.glb  king.glb  pawn.glb  rook.glb  skybox.glb  skybox.gltf  suzanne.glb  suzanne.gltf
src/res/models/chessboard/: bishop.glb  knight.glb  queen.glb  terrain.glb  tree.glb
src/res/models/engine/: suzanne.glb
src/res/models/pawn-shooter/: bullet.glb  gun.glb
src/res/models/skinned-mesh/: knight.glb  wiggle.glb
src/res/shader/: enigma_fragment_shader.glsl  enigma_fragment_unlit.glsl  enigma_geometry_grass_shader.glsl  enigma_geometry_shader.glsl  enigma_vertex_shader.glsl  enigma_vertex_wind_shader.glsl  shadow_depth_dir_frag.glsl  shadow_depth_point_frag.glsl  shadow_depth_vert.glsl  terrain_frag.glsl  terrain_vert.glsl
src/res/shader/post_processing/: post_processing_vert.glsl
src/res/textures/engine/: skybox.hdr
(+8 files in other folders)
