[package]
name = "enigma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.23.0"
egui-winit = "0.23.0"
glium = "0.33.0"
gltf = "1.4.0"
image = "0.24.7"
itertools = "0.12.0"
nalgebra = "0.32.3"
obj-rs = "0.7.1"
winit = "0.28.7"
rand = "0.8.5"
