[package]
name = "enigma"
version = "0.1.0"
authors = ["Jeremias Meister <contact@cg-jm.com>"]
edition = "2021"
description = "A 3D Rendering Engine with a focus on simplicity and ease of use."
include = ["src/res/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.23.0"
egui-winit = "0.23.0"
glium = "0.33.0"
gltf = "1.4.0"
image = "0.24.7"
itertools = "0.12.0"
nalgebra = "0.32.3"
nalgebra-glm = "0.18.0"
obj-rs = "0.7.1"
winit = "0.28.7"
rand = "0.8.5"
uuid = { version = "1.0", features = ["v4"] }
egui_glium = "0.23.0"

[package.metadata.bundle]
name = "Enigma 3D"
identifier = "io.github.JeremiasMeister.enigma"

