[package]
name = "enigma-3d"
version = "0.2.8"
authors = ["Jeremias Meister <contact@cg-jm.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/JeremiasMeister/enigma-3d.git"
description = "A 3D Rendering Engine with a focus on simplicity and ease of use. Far from feature complete and not recommended for production use."
build = "build.rs"
keywords = ["gamedev", "graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.23.0"
egui-winit = "0.23.0"
glium = "0.33.0"
gltf = "1.4.0"
image = "0.24.7"
itertools = "0.12.0"
nalgebra = "0.32.3"
nalgebra-glm = "0.18.0"
obj-rs = "0.7.1"
winit = "0.28.7"
rand = "0.8.5"
uuid = { version = "1.0", features = ["v4"] }
egui_glium = "0.23.0"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
rayon = "1.10.0"
parking_lot = "0.12.1"
once_cell = "1.18.0"
lru = "0.12.3"
indexmap = "2.2.6"

[package.metadata.bundle]
name = "Enigma 3D"
identifier = "io.github.JeremiasMeister.enigma"

[package.metadata.includedir]
include = ["src/res/**/*"]

